<resources>
    <string name="app_name">AppSoTayEnglish</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="cumtu">Cụm từ thông dụng</string>
    <string name="npmh">Ngữ pháp, Mẹo học</string>
    <string name="mucyeuthich">Mục yêu thích</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="caidatchung">Cài đặt chung</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
